# pykota

./: README.md
pkipplib/: MANIFEST.in  PKG-INFO  README  clean.sh  pyproject.toml  setup.py
pkipplib/%SystemDrive%/ProgramData/Microsoft/Windows/Caches/: {DDF571F2-BE98-426D-8288-1A9A39C3FDA2}.2.ver0x0000000000000001.db
pkipplib/notifiers/: samplenotifier  send-jabber
pkipplib/pkipplib/: __init__.py  pkipplib.py  version.py
pkipplib/pkipplib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pkipplib/src/pkipplib/: pkipplib.py  version.py
pkipplib/tests/: printjob.py  test.py
pkpgcounter/: BUGS  CREDITS  NEWS  PKG-INFO  README  TODO  clean.sh  gentarball.sh  pyproject.toml  setup.py
pkpgcounter/man/: genman.sh  pkpgcounter.1
pkpgcounter/pkpgcounter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pkpgcounter/pkpgpdls/: __init__.py  analyzer.py  bj.py  cfax.py  dvi.py  escp2.py  escpages03.py  hbp.py  inkcoverage.py  lidil.py  main.py  mscrap.py  ooo.py  pcl345.py  pclxl.py  pdf.py  pdlparser.py  pil.py  pjl.py  plain.py  pnmascii.py  postscript.py  qpdl.py  spl1.py  tiff.py  version.py  zjstream.py
pkpgcounter/src/pkpgpdls/: cfax.py  escp2.py  hbp.py  inkcoverage.py  lidil.py  mscrap.py  ooo.py  oxps.py  pdlparser.py  plain.py  pnmascii.py
pkpgcounter/tests/: README  gstests.py  master.ps  runcolors.py  runtest.sh
pykota/: checkdeps.py  pyproject.toml  setup.py
pykota/%SystemDrive%/ProgramData/Microsoft/Windows/Caches/: {6AF0698E-D558-4F6E-9B3C-3716689AF493}.2.ver0x0000000000000001.db
pykota/cgi-bin/: dumpykota.cgi  printquota.cgi  pykotme.cgi
pykota/initscripts/postgresql/: pykota-postgresql.sql
pykota/pykota/: test.py
pykota/pykota.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pykota/src/pykota/: config.py  dumper.py  logger.py  reporter.py  tool.py  version.py
pykota/src/pykota/accounters/: software.py
pykota/src/pykota/loggers/: system.py
pykota/src/pykota/reporters/: html.py  text.py
pykota/src/pykota/storages/: mysqlstorage.py  pgstorage.py  sqlitestorage.py
pykoticon/: CREDITS  MANIFEST.in  NEWS  PKG-INFO  README  TODO  clean.sh  pykotaicon.py  setup.py
pykoticon/man/: genman.sh  pykoticon.1
tea4cups/: CREDITS  NEWS  README  TODO  clean.sh  tea4cups  tea4cups.conf
